# simpleplot

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
benchmarks/: benchmark.py  example_timings.py  scenarios.py
docs/: api.rst  conf.py  index.rst  installation.rst  performance.rst  requirements.txt  usage.rst
docs/examples/: README.txt  plot_01_line.py  plot_02_scatter.py  plot_03_bar.py  plot_04_barh.py  plot_05_stem.py  plot_06_step.py  plot_07_fill_between.py  plot_08_stackplot.py  plot_09_hist.py  plot_10_boxplot.py  plot_11_errorbar.py  plot_12_violin.py  plot_13_eventplot.py  plot_14_hist2d.py  plot_15_pie.py  plot_16_imshow.py  plot_17_pcolormesh.py  plot_18_contour.py  plot_19_quiver.py  plot_20_subplots.py  plot_21_loglog.py  plot_22_annotations.py  plot_23_mesh_grid.py  plot_24_contourf.py  plot_25_hexbin.py  plot_26_twin_axes.py  plot_27_curvilinear_mesh.py  plot_28_gouraud.py  plot_29_reference_lines.py  plot_30_lognorm.py  plot_31_shared_colorbar.py  plot_32_broken_barh.py  plot_33_font_metrics.py
docs/examples/limitations/: README.txt  plot_01_font_metrics.py  plot_02_kde_binning.py  plot_03_single_line_text.py
docs/examples/seaborn/: README.txt  plot_01_kde.py  plot_02_kde_hist.py  plot_03_ecdf.py  plot_04_rug.py  plot_05_marginal_rug.py  plot_06_violin_inner.py  plot_07_violin_horizontal.py  plot_08_violin_cut.py
docs/user_guide/: architecture.rst  axes.rst  figures.rst  interactivity.rst  limitations.rst  output.rst  plotting.rst  styling.rst  viewing.rst
examples/: extract_markers.py  gallery.py  max_grid.py  mesh_grid_500.py  pick_z.py  plot_types.py  plot_types_2.py  show_window.py  slider_3d.py  slider_modes.py
simpleplot/: __init__.py  _interactive.py  artists.py  axes.py  colors.py  figure.py  png.py  primitives.py  qt.py  raster.py  style.py  svg.py  ticker.py  transform.py
simpleplot/fonts/: __init__.py  metrics.py
tests/: pick_cases.py  pick_harness.js  test_axes.py  test_distributions.py  test_fonts.py  test_matplotlib_gaps.py  test_no_global_state.py  test_performance.py  test_pick_interactive.py  test_png.py  test_qt.py  test_svg_output.py  test_units.py
