[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "simpleplot"
version = "0.0.1"
description = "A fast, figure-centric, SVG-first plotting library with a matplotlib-like API and no global state."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "simpleplot contributors" }]
keywords = ["plotting", "svg", "visualization", "matplotlib", "figure"]
# The standard install covers all file output out of the box: SVG, interactive
# HTML, PNG raster, and vector PDF -- pure-wheel deps, installable everywhere.
dependencies = [
    "numpy>=1.21",
    "pillow>=9",        # PNG raster export (fig.save('*.png'))
    "svglib>=1.4",      # PDF export (fig.save('*.pdf'))
    "reportlab>=3.6",   # PDF export
]

[project.optional-dependencies]
# The native fig.show() window needs a desktop webview stack (pythonnet on
# Windows, pyobjc on macOS, system GTK/WebKit on Linux). Keep it optional so the
# standard install stays server/CI/notebook friendly; fig.show() otherwise
# falls back to the browser.
gui = ["pywebview>=4.0"]
# Embed interactive figures in a PyQt/PySide app (simpleplot.qt). PySide6 or
# PyQt5+PyQtWebEngine work too; this extra pulls the PyQt6 stack by default.
qt = ["PyQt6>=6.4", "PyQt6-WebEngine>=6.4"]
dev = ["pytest>=7"]
# Benchmarking against matplotlib (benchmarks/ and the comparative perf tests).
bench = ["matplotlib>=3.5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "perf: timing/benchmark tests (deselect with -m 'not perf')",
]

[project.urls]
Homepage = "https://github.com/simpleplot/simpleplot"

[tool.setuptools.packages.find]
include = ["simpleplot*"]

[tool.setuptools.package-data]
simpleplot = ["fonts/*.py"]
